--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/icon.ico" type="image/x-icon" />
+
+  
     <title>RONA GAMES</title>
     <script src="js/phaser.min.js">  
     </script>
@@ -15,11 +18,13 @@
     <script src="js/SelectMode1.js"></script>
     <script src="js/SelectGameScene.js"></script>
     <script src="js/GameOver.js"></script>
+    <script src="js/LoadingScreen.js"></script>
+    <script src="js/BootScene.js"></script>
 
     <style media='screen' type='text/css'>
         @font-face {
            font-family: GameFont;
-           src: url('assets/fonts/font.otf');
+           src: url('assets/fonts/font.otf') format("truetype");
            font-weight: 400;
            font-weight:normal;
         }
@@ -60,7 +65,7 @@ html,body {
 
 
     <div id="LoadGame" class="red-square"></div>
-
+    <span style="font-family:'GameFont'"></span>
 
 </body>
 </html>
