--- a/index.html
+++ b/index.html
@@ -56,20 +56,15 @@
 
     <style>
 html,body {
-  background: url('assets/images/body.png');
-  height: 100%;
+ height: 100%;
   overflow: hidden;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-size: cover;
 }
 
 .red-square {
-  border-radius: 25px;
+  
   margin: auto;
   max-width:auto;
-  height:100%;
+  height:auto;
   position: absolute;
   left: 50%;
   top: 50%;
