--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Rona Games | Help Page </title>
+  <title>Quarantine  Games | Help Page </title>
 </head>
 <body>
 <header class="cd-header flex flex-column flex-center">
