--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="assets/icon.ico" type="image/x-icon" />
 
   
-    <title>RONA GAMES</title>
+    <title>QUARANTINE GAMES</title>
     <script src="js/phaser.min.js">  </script>
      <script src="js/phaser.js"></script>
     <script src="js/scenes/main.js"></script>
@@ -62,6 +62,7 @@ html,body {
 
 .red-square {
   
+
   margin: auto;
   max-width:auto;
   height:auto;
@@ -81,6 +82,7 @@ html,body {
     <div id="LoadGame" class="red-square"></div>
     <span style="font-family:'GameFont'"></span>
     <span style="font-family:'Franklin'"></span>
+
 
 </body>
 </html>
