--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Quarantine  Games | Help Page </title>
+  <title>Tap Games | Help Page </title>
 </head>
 <body>
 <header class="cd-header flex flex-column flex-center">
@@ -131,11 +131,12 @@
 			<br>
 	 <p>
 
-		Sum Up Puzzle is an addition game with 3x3, 4x4 and 5x5 tiles system.
+		Sum Up Puzzle is an addition game with a 3x3, 4x4 and 5x5 tiles system.
 		The aim of the game is to keep all numbers on the white tiles to the right
 		and bottom the same by adding all numbers in the brown tiles
 		in each row and column. Touching the numbers in the brown tiles will increase the number
 		touched by 1 thereby adding an extra number to the white tile to the right and bottom of that number.
+		A few microseconds delay is added to prevent double tapping by mistake, you can only tap one at a time.
 		The game will end when all numbers on the white tiles are the same.
 		<img src="assets/images/help/sumup3.jpg" height="400px"/>
 		<br>
