--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="icon" href="assets/icon.ico" type="image/x-icon" />
 
   
-    <title>QUARANTINE GAMES</title>
+    <title>TAP GAMES</title>
     <script src="js/phaser.min.js">  </script>
      <script src="js/phaser.js"></script>
-    <script src="js/scenes/main.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/scenes/BootScene.js"></script>
     <script src="js/scenes/LoadingScreen.js"></script>
     <script src="js/scenes/SelectGameScene.js"></script>
@@ -47,9 +47,11 @@
      font-weight:normal;
   }
  .fontLoader {
+
      position: absolute;
      left: -1000px;
      visibility: hidden;
+     
   }
 </style>
 
