--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="A single page HTML 5 Games Project developed in Phaser3 for mobile devices and Desktop">
+    <meta name="keywords" content="HTML,HTML5, CSS, JavaScript,Phaser3,Web,Games">
+    <meta name="author" content="iNerdStack">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <link rel="icon" href="assets/icon.ico" type="image/x-icon" />
 
   
@@ -51,7 +56,7 @@
      position: absolute;
      left: -1000px;
      visibility: hidden;
-     
+
   }
 </style>
 
