--- a/help.html
+++ b/help.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A single page HTML 5 Games Project developed in Phaser3 for mobile devices and Desktop">
+  <meta name="description" content="A single page HTML5 games project developed in PhaserJS for mobile devices and desktop">
   <meta name="keywords" content="HTML,HTML5, CSS, JavaScript,Phaser3,Web,Games">
   <meta name="author" content="iNerdStack">
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
